# Task_4_CPP

./: CMakeLists.txt  README.md  main.cpp
data/: result.txt  synonyms.txt  text.txt
include/: App.h  Logger.h
logs/: app_log.txt
src/: App.cpp  Logger.cpp
